--- a/.vercelignore
+++ b/.vercelignore
@@ -1,8 +1,9 @@
 node_modules
 .git
-.gitignore
 README.md
 PRODUCTION-READY.md
 DESIGN.png
-src
+DEPLOY.md
+IMPLEMENTATION.md
 .cursor
+safna-safna-landing-page.plan.md
